Adding event binding

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,5 @@
 <p>{{title}}</p>
-<img [src]="url" alt="logo of bridgelabz">
+<img [src]="url" (click)="onClick($event)" alt="logo of bridgelabz">
+
 
 
