--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,5 +1,9 @@
 <p>{{title}}</p>
+<p>Hello {{user}} from Bridgelabz</p>
 <img [src]="url" (click)="onClick($event)" alt="logo of bridgelabz">
-
+<br>
+<div>
+<input [(ngModel)]="user" type="text"  name="username" id="user">
+</div>
 
 
